plugins {
    id 'java'
    id 'io.github.goooler.shadow' version '8.1.8'
    // Plugin to run paper server directly from IDE
    id 'xyz.jpenilla.run-paper' version '2.3.0'
}

group = 'pluginsmc.langdua'
version = '2.5'

sourceCompatibility = '21'
targetCompatibility = '21'

repositories {
    mavenCentral()
    maven { url = 'https://repo.papermc.io/repository/maven-public/' }
    maven { url = 'https://repo.aikar.co/content/groups/aikar/' }

    // Thêm 3 Repo này cho PAPI, WorldGuard, MythicMobs
    maven { url = 'https://repo.extendedclip.com/content/repositories/placeholderapi/' }
    maven { url = 'https://maven.enginehub.org/repo/' }
    maven { url = 'https://mvn.lumine.io/repository/maven-public/' }
}

dependencies {
    // Paper API 1.21
    compileOnly 'io.papermc.paper:paper-api:1.21.1-R0.1-SNAPSHOT'

    // Lombok
    compileOnly 'org.projectlombok:lombok:1.18.34'
    annotationProcessor 'org.projectlombok:lombok:1.18.34'

    // CommandAPI
    implementation 'dev.jorel:commandapi-paper-shade:11.1.0'

    //Hooking
    compileOnly 'me.clip:placeholderapi:2.11.6'
    compileOnly 'com.sk89q.worldguard:worldguard-bukkit:7.0.9'
    compileOnly 'io.lumine:Mythic-Dist:5.6.2'
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

// Ensure plugin.yml is processed correctly
processResources {
    def props = [version: version]
    inputs.properties props
    filteringCharset 'UTF-8'
    filesMatching(['plugin.yml', 'paper-plugin.yml']) {
        expand props
    }
}

shadowJar {
    archiveClassifier.set('all')
    relocate 'dev.jorel.commandapi', 'pluginsmc.langdua.core.paper.lib.commandapi'
}

build.dependsOn shadowJar

// RunServer Configuration
tasks.runServer {
    // Set Minecraft version
    minecraftVersion("1.21.11")

    // Auto-accept EULA
    runDirectory(file("run"))

    // Auto-download external plugins for testing
    downloadPlugins {
        // Download EssentialsX directly from official release
        url("https://github.com/EssentialsX/Essentials/releases/download/2.20.1/EssentialsX-2.20.1.jar")
    }
}
